# Location_Explorer_Agent_

./: README.md
LocationExplorerAgent/: Dockerfile  property_recommendations.csv  pyproject.toml  underutilized_properties.geojson
LocationExplorerAgent/data/: 2025-4-11-iolp-buildings.xlsx
LocationExplorerAgent/locationexploreragent/: agent.py
LocationExplorerAgent/output/: underutilized_spaces.html
LocationExplorerAgent/pretrained_models/: regression_model.joblib
LocationExplorerAgent/scripts/: run_agent.py
