[tool.poetry]
name = "locationexploreragent"
version = "0.1.0"
description = ""
authors = ["Usamaniaz219 <166790349+Usamaniaz219@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
geopandas = "^1.0.1"
numpy = "^2.2.5"
pandas = "^2.2.3"
folium = "^0.19.5"
scikit-learn = "^1.6.1"
shapely = "^2.1.0"
joblib = "^1.5.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
imbalanced-learn = "^0.13.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
